--- a/src/db/db.properties.example
+++ b/src/db/db.properties.example
@@ -1,3 +1,3 @@
-db.url=jdbc:sqlserver://localhost:1433;databaseName=Air_Booking_System;encrypt=true;trustServerCertificate=true
+db.url=jdbc:sqlserver://localhost:1433;databaseName=QLAirLine;encrypt=true;trustServerCertificate=true
 db.user=YOUR_USERNAME
 db.password=YOUR_PASSWORD
