--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "d:\\uni\\nam2\\HK2\\JAVA\\Do-an-xay-dung-ung-dung-quan-ly-ban-ve-may-bay\\lib\\flatlaf-3.7.jar",
         "d:\\uni\\nam2\\HK2\\JAVA\\Do-an-xay-dung-ung-dung-quan-ly-ban-ve-may-bay\\lib\\poi-5.2.3.jar",
         "d:\\uni\\nam2\\HK2\\JAVA\\Do-an-xay-dung-ung-dung-quan-ly-ban-ve-may-bay\\lib\\mssql-jdbc-13.2.1.jre11.jar",
-        "d:\\uni\\nam2\\HK2\\JAVA\\Do-an-xay-dung-ung-dung-quan-ly-ban-ve-may-bay\\lib\\commons-math3-3.6.1.jar"
+        "d:\\uni\\nam2\\HK2\\JAVA\\Do-an-xay-dung-ung-dung-quan-ly-ban-ve-may-bay\\lib\\commons-math3-3.6.1.jar",
+        "lib/**/*.jar"
     ]
 }
