DoivePanel, ThanhToanDoiVePanel. Xong DoiVe cho Khach hang de gui yeu cau qua cho admin, con 1 panel QuanLyDoiVe cho Admin nua de duyet y/c do

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,5 @@ src/test/TestThuHang.java
 src/test/TestQuanLyThuHangPanel.java
 src/test/TestPanelUserProfile.java
 src/test/TestQuanLyKhuyenMaiPanel.java
+src/test/TestDoiVePanel.java
 
